--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
